# InvertedPendulum-Simulator-Cpp

./: CMakeLists.txt  README.md  一阶倒立摆.md  问题记录.md
backup/: angle_pid2_backup.cpp  angle_pid_backup.cpp  lqr2_backup.cpp  lqr_backup.cpp
inc/: lqr.h  pendulum.h  pid.h
output/: plot_simulation.py  simulation.csv
src/: lqr.cpp  main.cpp  pendulum.cpp  pid.cpp
